# stm32-serial-blink

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  Makefile  README.md  VALIDATION.md  application.hpp  button_tests.cpp  command_processor.cpp  command_processor.hpp  command_processor_tests.cpp  launch.json  main.cpp  settings.json  tasks.json
app/: application.cpp  application.hpp  main.cpp  mainwalker.cpp
app/animations/: rainbow_animation.cpp  rainbow_animation.hpp  status_led_controller.cpp  status_led_controller.hpp
app/commands/: command.hpp  command_catalog.hpp  command_processor.cpp  command_processor.hpp  serial_console.cpp  serial_console.hpp
app/input/: double_press_detector.hpp
app/time/: deadline.hpp
bsp/: board.cpp  board.hpp  board_config.hpp
cmake/: arm-none-eabi.cmake
config/: firmware_config.hpp
devices/: external_led_board.cpp  external_led_board.hpp  rgb.hpp
drivers/button/: button.cpp  button.hpp  button_debouncer.cpp  button_debouncer.hpp
drivers/gpio/: gpio.cpp  gpio.hpp
drivers/i2c/: i2c.cpp  i2c.hpp
drivers/led/: led.cpp  led.hpp
drivers/led_controller/: aw9523.cpp  aw9523.hpp  external_led_board.cpp  external_led_board.hpp  is31fl3218.cpp  is31fl3218.hpp
drivers/uart/: uart.cpp  uart.hpp
examples/legacy/: README.md  mainb.cpp
linker/: stm32f407.ld
platform/stm32f407/: registers.cpp  registers.hpp  system.cpp  system.hpp
startup/: startup.cpp  vectors.cpp
tests/: command_processor_tests.cpp  double_press_detector_tests.cpp
